--- a/.pylintrc
+++ b/.pylintrc
@@ -2,3 +2,6 @@
 disable=missing-module-docstring,
         missing-function-docstring,
         missing-class-docstring
+
+[FORMAT]
+max-line-length=350
