--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
 Flask==3.0.3
 requests==2.31.0
 geopy==2.3.0
-openai==0.27.0
+openai>=0.27.0
 python-dotenv==1.0.0
 flask_cors==4.0.1
 google-cloud-secret-manager
